feat: message deserialize