@@ -7,6 +7,8 @@ import java.util.List;
 import java.util.Objects;
 
 import org.bitcoinj.core.Base58;
+import org.p2p.solanaj.utils.ByteUtils;
+import org.p2p.solanaj.utils.GuardedArrayUtils;
 import org.p2p.solanaj.utils.ShortvecEncoding;
 import org.p2p.solanaj.utils.TweetNaclFast;
 
@@ -28,6 +30,11 @@ public class Transaction {
     public Transaction() {
         this.message = new Message();
         this.signatures = new ArrayList<>(); // Use diamond operator
+    }
+
+    public Transaction(Message message, List<String> signatures) {
+        this.message = message;
+        this.signatures = signatures;
     }
 
     /**
@@ -61,7 +68,7 @@ public class Transaction {
      * @throws NullPointerException if the signer is null
      */
     public void sign(Account signer) {
-        sign(Arrays.asList(Objects.requireNonNull(signer, "Signer cannot be null"))); // Add input validation
+        sign(List.of(Objects.requireNonNull(signer, "Signer cannot be null"))); // Add input validation
     }
 
     /**
@@ -76,7 +83,7 @@ public class Transaction {
         }
 
         Account feePayer = signers.get(0);
-        message.setFeePayer(feePayer);
+        message.setFeePayer(feePayer.getPublicKey());
 
         serializedMessage = message.serialize();
 
@@ -89,6 +96,13 @@ public class Transaction {
                 throw new RuntimeException("Error signing transaction", e); // Improve exception handling
             }
         }
+    }
+
+    public String getTxHash(){
+        if (signatures == null || signatures.isEmpty()){
+            return null;
+        }
+        return signatures.get(0);
     }
 
     /**
@@ -114,5 +128,75 @@ public class Transaction {
         out.put(serializedMessage);
 
         return out.array();
+    }
+
+
+//    public static Transaction deserialize(byte[] serializeTx){
+//        int signaturesSize = ShortvecEncoding.decodeLength(serializeTx);
+//        List<String> signatures = new ArrayList<>(signaturesSize);
+//
+//        List<Byte> serializedTransactionList = ByteUtils.toByteList(serializeTx);
+//
+//        for (int i = 0; i < signaturesSize; i++) {
+//
+//            byte[] signatureBytes = GuardedArrayUtils.guardedSplice(serializedTransactionList, 0, SIGNATURE_LENGTH);
+//            signatures.add(Base58.encode(signatureBytes));
+//        }
+//
+////        Message message = Message.deserialize(serializedTransactionList);
+//        return new Transaction(null, signatures);
+//    }
+
+
+//    public static Transaction deserialize(byte[] serializedTransaction) {
+//        List<Byte> serializedTransactionList = ByteUtils.toByteList(serializedTransaction);
+//
+//        int signaturesSize = ShortvecEncoding.decodeLength(serializedTransaction);
+//        List<String> signatures = new ArrayList<>(signaturesSize);
+//
+//        byte[] byteArray = serializedTransaction;
+//
+//        for (int i = 0; i < signaturesSize; i++) {
+//
+//            byte[] signatureBytes = GuardedArrayUtils.guardedSplice(serializedTransactionList, 0, SIGNATURE_LENGTH);
+//            signatures.add(Base58.encode(signatureBytes));
+//
+////            System.out.println("byteArray--1->" + Arrays.toString(byteArray));
+////            byte[] signature = slice(byteArray, 0, Transaction.SIGNATURE_LENGTH);
+////            System.out.println("signature-- ->" + Arrays.toString(signature));
+////            signatures.add(Base58.encode(signature));
+////
+////            System.out.println("byteArray--2->" + Arrays.toString(byteArray));
+////            byteArray = Arrays.copyOfRange(byteArray, Transaction.SIGNATURE_LENGTH, byteArray.length);
+////
+////            System.out.println("byteArray--3->" + Arrays.toString(byteArray));
+////            signatures.add(Base58.encode(signature));
+//        }
+//
+//        // Message message = Message.deserialize(serializedTransactionList);
+//        // todo kevin
+//        return new Transaction(null, signatures);
+//    }
+
+    public static Transaction deserialize(byte[] serializedTransaction) {
+        List<Byte> serializedTransactionList = ByteUtils.toByteList(serializedTransaction);
+
+        int signaturesSize = ShortvecEncoding.decodeLength(serializedTransactionList);
+        List<String> signatures = new ArrayList<>(signaturesSize);
+
+        for (int i = 0; i < signaturesSize; i++) {
+
+            byte[] signatureBytes = GuardedArrayUtils.guardedSplice(serializedTransactionList, 0, SIGNATURE_LENGTH);
+            signatures.add(Base58.encode(signatureBytes));
+        }
+
+         Message message = Message.deserialize(serializedTransactionList);
+        return new Transaction(message, signatures);
+    }
+
+    public static byte[] slice(byte[] data, int start, int length) {
+        byte[] slice = new byte[length];
+        System.arraycopy(data, start, slice, 0, length);
+        return slice;
     }
 }
